# Vehicle-Insurance-Data-Pipeline-MLOps

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  demo.py  pyproject.toml  setup.py
notebook/: experiment-notebook.ipynb  mongoDb_demo.ipynb
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
